Extensions: Add Extensions.UnifiedExtensionUpdaterUpdateServiceErrors histogram.

Now that the update client can return update service error details, this
information can be used to understand more about what kind of service
errors the update service may encouter when doing update checks.

Bug: 869663
Change-Id: I10c693b05ebbe6c1f804606c4749acb0a178e7bd
Reviewed-on: https://chromium-review.googlesource.com/1180076
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Robert Kaplow (slow) <rkaplow@chromium.org>
Reviewed-by: Sorin Jianu <sorin@chromium.org>
Commit-Queue: Minh Nguyen <mxnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584585}
Former-commit-id: 6e0e7cd9bf10a61f443ba63115e86e9204d061ae